# splunk-monitoring

./: .gitignore  .pylintrc  README.md  SECURITY.MD  SECURITY.md  config.json.example  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: dependabot_auto_merge.yml  mypy.yml  pylint.yml  pytest.yml  zipit.yml
scripts/: hec-error-restarter.sh  hec-watchdog.py  loghandler.py  os-release.py  utils.py
splunk_monitoring/: __init__.py  hec_watchdog.py  loghandler.py  os_release.py  utils.py
systemd/: hec-watchdog.service  hec-watchdog.timer
tests/: test_hec_watchdog.py
