[tool.poetry]
name = "splunk-monitoring"
version = "0.0.5"
description = "Scripts I use for monitoring Splunk-related things"
authors = [
    "James Hodgkinson <james@terminaloutcomes.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
schedule = "^1.2.1"
click = "^8.1.8"
requests = "^2.31.0"
loguru = "^0.7.3"
backoff = "^2.2.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4"
pytest = "^7.4.4"
ruff = "^0.11.10"

[tool.poetry.scripts]
splunk-hec-watchdog = "splunk_monitoring.hec_watchdog:cli"
splunk-os-release = "splunk_monitoring.os_release:cli"
splunk-log-handler = "splunk_monitoring.loghandler:cli"

[tool.ruff]
line-length = 200

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "splunk-monitoring"
description = "Scripts I use for monitoring Splunk-related things"
license = "MIT"
version = "0.0.5"
authors = [
    { name = "James Hodgkinson", email = "james@terminaloutcomes.com" },
]
