
[project]
name = "splunk-monitoring"
description = "Scripts I use for monitoring Splunk-related things"
license = { text = "MIT" }
version = "0.1.0"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
requires-python = "<4.0,>=3.7"
dependencies = [
    "schedule>=1.2.1",
    "loguru>=0.7.3",
    "backoff>=2.2.1",
    "click>=8.1.8",
]

[project.scripts]
splunk-hec-watchdog = "splunk_monitoring.hec_watchdog:cli"
splunk-os-release = "splunk_monitoring.os_release:cli"
splunk-log-handler = "splunk_monitoring.loghandler:cli"

[dependency-groups]
dev = ["mypy>=1.4", "pytest>=7.4.4", "ruff>=0.11.13"]


[tool.ruff]
line-length = 200

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
